# TheBillionaireIndex

./: .gitignore  CMakeLists.txt  README.md  billionaire.h  billionaire_list_20yrs.csv  heap.h  heapsort.cpp  merge  merge.cpp  merge.h
merge.dSYM/Contents/Resources/DWARF/: merge
merge.dSYM/Contents/Resources/Relocations/aarch64/: merge.yml
react-ui/: .gitignore  index.html  package-lock.json  package.json
react-ui/src/: App.css  App.jsx  BarChart.jsx
src/: main.cpp
